// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditButton matches the last snapshot when isLoading is false 1`] = `
<View>
  <View>
    <Icon
      allowFontScaling={false}
      name="edit"
      size={12}
    />
    <Text>
      edit
    </Text>
  </View>
</View>
`;

exports[`EditButton matches the last snapshot when isLoading is true 1`] = `
<View>
  <Text>
    loading
  </Text>
</View>
`;

exports[`MemberBanner matches the last snapshot 1`] = `
<View>
  <ImagePicker
    disabled={true}
    id={1}
    onChoice={[Function]}
    onPendingChange={[Function]}
    title="Change Banner"
    type="userBanner"
  >
    <Image
      source={
        Object {
          "uri": "yay.png",
        }
      }
    />
  </ImagePicker>
  <View>
    <ImagePicker
      disabled={true}
      id={1}
      onChoice={[Function]}
      onPendingChange={[Function]}
      title="Change Avatar"
      type="userAvatar"
    >
      <View>
        <Image
          source={
            Object {
              "uri": "pong.png",
            }
          }
        />
      </View>
    </ImagePicker>
  </View>
</View>
`;

exports[`MemberBanner shows local images if present 1`] = `undefined`;

exports[`MemberProfile doesnt have the flag content option 1`] = `
<MemberFeed
  header={
    <View>
      <MemberBanner
        isFocused={true}
        person={
          Object {
            "id": 1,
          }
        }
      />
      <View>
        <MemberHeader
          blockUser={[Function]}
          person={
            Object {
              "id": 1,
            }
          }
        />
        <ReadMoreButton />
      </View>
    </View>
  }
  id={1}
  navigation={
    Object {
      "setOptions": [MockFunction],
    }
  }
/>
`;

exports[`MemberProfile matches the last snapshot 1`] = `
<MemberFeed
  header={
    <View>
      <MemberBanner
        isFocused={true}
        person={
          Object {
            "id": 1,
          }
        }
      />
      <View>
        <MemberHeader
          blockUser={[Function]}
          flagMember={[Function]}
          person={
            Object {
              "id": 1,
            }
          }
        />
        <ReadMoreButton />
      </View>
    </View>
  }
  id={1}
  navigation={
    Object {
      "setOptions": [MockFunction],
    }
  }
/>
`;

exports[`MemberProfile shows loading without a person 1`] = `<Loading />`;

exports[`ReadMoreButton matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <View>
      <Text>
        Read More
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
